--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>cochez consult</title>
   <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet" type="text/css">
-  <link href="styles/style.css" media="screen" rel="stylesheet" type="text/css">
+  <% if (htmlWebpackPlugin.options.mode === "production") { %>
   <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
@@ -23,6 +23,7 @@
     ga('create', 'UA-38982355-3', 'auto');
     ga('send', 'pageview');
   </script>
+  <% } %>
 </head>
 
 <body>
