--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>cochez consult</title>
-  <link href="http://fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Lato:100,300,400" rel="stylesheet" type="text/css">
   <% if (htmlWebpackPlugin.options.mode === "production") { %>
   <script>
     (function(i, s, o, g, r, a, m) {
@@ -41,11 +41,11 @@
           <span class="prefix">phone number:</span>
           <span>available upon request</span>
         </li>
-        <li><a class="u-url" href="http://heavyindustries.io/">my blog</a></li>
-        <li><a href="http://careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
-        <li><a href="http://be.linkedin.com/in/bencochez/">linkedin</a></li>
-        <li><a href="http://github.com/benc/">github</a></li>
-        <li><a href="http://twitter.com/bencochez/">twitter</a></li>
+        <li><a class="u-url" href="//heavyindustries.io/">my blog</a></li>
+        <li><a href="//careers.stackoverflow.com/bencochez">stack overflow careers</a></li>
+        <li><a href="//be.linkedin.com/in/bencochez/">linkedin</a></li>
+        <li><a href="//github.com/benc/">github</a></li>
+        <li><a href="//twitter.com/bencochez/">twitter</a></li>
       </ul>
     </section>
   </div>
